Change Dockerfile to native